# DongTamV2

./: .gitignore  .gitmodules  README.md
.metadata/: version.ini
.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
Code/: .gitignore
Code/DongTamV2.1/: .cproject  .project  DongTamV2.1 Debug.launch  DongTamV2.1.ioc
Code/ESP32/: .cproject  .gitignore  .project  CMakeLists.txt  sdkconfig
Code/ESP32/main/: BoardParameter.c  BoardParameter.h  CMakeLists.txt  Kconfig.projbuild  ShareVar.h  UART.c  UART.h  main.c  main.h
Code/ESP32/main/GUI/: GUI.c  GUI.h  GUI_Navigation.c  GUI_Navigation.h  LedButton.c  LedButton.h  PressureIndicator.c  PressureIndicator.h
Code/ESP32/main/JsonHandle/: JsonHandle.c  JsonHandle.h
Code/ESP32/main/MessageHandle/: MessageHandle.c  MessageHandle.h
Code/ESP32/main/OnlineHandle/: DNS_Ping.c  DNS_Ping.h  HTTP_POSTGET.c  HTTP_POSTGET.h  OnlineManage.c  OnlineManage.h  OnlineStatusEvent.c  OnlineStatusEvent.h  WiFi.c  WiFi.h
Hardware/: 16_VALVE_CONTROL.kicad_sch  1_TL084IPT.kicad_sch  2_TL084IPT.kicad_sch  3_TL084IPT.kicad_sch  4-20mAConverter.kicad_sch  4_TL084IPT.kicad_sch  EEPROM.kicad_sch  ESP32.kicad_sch  GET_16_VALVE_STAGE.kicad_sch  IDC14pin.kicad_sch  LORA.kicad_sch  OPAMP.kicad_sch  PRESSURE_SENSOR.kicad_sch  Power.kicad_sch  RELAY_OPTO.kicad_sch  RS485.kicad_sch  RTC.kicad_sch  STM32F103C8T6.kicad_sch  dongtam.kicad_pcb  dongtam.kicad_pro  dongtam.kicad_sch
Hardware/bom/: ibom.html
Image/: DongTamBlockDiagram.drawio
(+15 files in other folders)
