idf_component_register(SRCS "BoardParameter.c" "MessageHandle/MessageHandle.c" "OnlineHandle/HTTP_POSTGET.c"  "OnlineHandle/WiFi.c" "OnlineHandle/OnlineManage.c" "OnlineHandle/DNS_Ping.c" "OnlineHandle/OnlineStatusEvent.c" "GUI/GUI.c" "GUI/PressureIndicator.c" "GUI/GUI_Navigation.c" "GUI/LedButton.c" "UART.c"  "main.c" 
                       INCLUDE_DIRS "."
                       )
                       



